welcome.lessons.welcome.bat.bool1.LastDigit.scala.error
lastDigit:5: error: reassignment to val
			a = a%(10)
                          ^lastDigit:6: error: reassignment to val
			b = b%(10)
                          ^