welcome.lessons.welcome.bat.bool1.LastDigit.scala.code
def lastDigit(a:Int, b:Int):Boolean = {
	
		
		
			a = a%(10)
			b = b%(10)
	
		
			return (a==b) 
			}
 